--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,16 @@ node_js:
 cache: npm
 branches:
   only:
-    - master # build master branch only
+    - hexo # build master branch only
 script:
   - hexo generate # generate static files
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GH_TOKEN
-  keep-history: true
+  keep-history: false
   on:
     branch: master
+  all_branches: true
+  target_branch: master
   local-dir: public
