--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: liop
 subtitle: ''
-description: '一个工程师'
+description: 'To become a real engineer.'
 keywords: iOS web 
 author: liop
-language: zh-Hans
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
