--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-renderer-marked": "^2.0.0",
+    "hexo-generator-sitemap":"",
+    "hexo-generator-json-content":"*",
+    "hexo-autonofollow":"*",
+    "hexo-directory-category":"*",
     "hexo-server": "^1.0.0"
   }
 }
