--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "6.1.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "hexo": "^6.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-generator-sitemap":"",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-marked": "^5.0.0",
+    "hexo-generator-sitemap":"*",
     "hexo-generator-json-content":"*",
     "hexo-autonofollow":"*",
     "hexo-directory-category":"*",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^3.0.0"
   }
 }
